--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,19 @@ body{
     display: flex;
     flex-direction: column;
 }
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+h3{
+    font-size: 28px;
+    margin: 0;
+}
+ul li{
+    display: inline-block;
+}
+a{
+    color: white;
+    text-decoration: none;
+
+}
