--- a/styles.css
+++ b/styles.css
@@ -32,5 +32,9 @@ ul li{
 a{
     color: white;
     text-decoration: none;
-
+}
+.ul-a{
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-bottom: 4px solid white;
 }
