--- a/styles.css
+++ b/styles.css
@@ -54,4 +54,13 @@ a{
 h1{
     margin: 0;
     margin-bottom: 8px;
+    font-size: 38px;
+    font-weight: bold;
+}
+p{
+    margin: 0;
+    margin-bottom: 16px;
+    font-size: 20px;
+    line-height: 30px;
+    margin-block-end: 20px;
 }
