--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,14 @@ body{
     display: flex;
     flex-direction: column;
 }
+@media (max-width:750px){
+    nav{
+        display: flex;
+        align-content: center;
+        flex-flow: wrap column;
+        text-align: center;
+    }
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -51,6 +59,9 @@ a{
 .ul-a2:hover{
     border-bottom: 4px solid gray;
 }
+main{
+    margin: auto;
+}
 h1{
     margin: 0;
     margin-bottom: 8px;
@@ -82,10 +93,11 @@ p{
     font-size: 20px;
     line-height: 30px;
 }
-footer
+footer{
+    margin: auto;
+}
 .footer-p{
     margin: 0;
-    margin-bottom: 16px;
     color: gray;
     font-size: 16px;
 }
